2011-04-11  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by James Robinson.

        [chromium] Properly invalidate the contents of ImageLayerChromium's
        when the actual image contents change.
        https://bugs.webkit.org/show_bug.cgi?id=58181

        Test: compositing/images/content-image-change.html

        * platform/graphics/chromium/ContentLayerChromium.cpp:
        (WebCore::ContentLayerChromium::updateTexture):
        * platform/graphics/chromium/ImageLayerChromium.cpp:
        (WebCore::ImageLayerChromium::ImageLayerChromium):
        (WebCore::ImageLayerChromium::setContents):
        (WebCore::ImageLayerChromium::paintContentsIfDirty):
        * platform/graphics/chromium/ImageLayerChromium.h:

2011-04-11  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        -webkit-box-shadow:inset does not animate transform as an inset shadow
        https://bugs.webkit.org/show_bug.cgi?id=45176
        
        Two fixes:
        1. Don't run transitions between different shadow styles (normal vs. inset).
        2. When either source or destination is null, use a default shadow with a
        matching style so that the transition runs.

        Test: transitions/mismatched-shadow-styles.html

        * page/animation/AnimationBase.cpp:
        (WebCore::blendFunc):
        (WebCore::PropertyWrapperShadow::blend):

2011-04-11  John Bates  <jbates@google.com>

        Reviewed by Kenneth Russell.

        chromium support for glSetLatch and glWaitLatch between 3D contexts
        https://bugs.webkit.org/show_bug.cgi?id=58003

        * platform/graphics/chromium/Canvas2DLayerChromium.cpp:
        (WebCore::Canvas2DLayerChromium::~Canvas2DLayerChromium):
        (WebCore::Canvas2DLayerChromium::setDrawingBuffer):
        (WebCore::Canvas2DLayerChromium::setLayerRenderer):
        * platform/graphics/chromium/Canvas2DLayerChromium.h:
        * platform/graphics/chromium/Extensions3DChromium.h: