@@ -1,3 +1,15 @@
+2011-04-11  Philippe Normand  <pnormand@igalia.com>
+
+        Reviewed by Martin Robinson.
+
+        [GStreamer] warnings in media/video-set-rate-from-pause.html
+        https://bugs.webkit.org/show_bug.cgi?id=58220
+
+        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
+        (WebCore::MediaPlayerPrivateGStreamer::setRate): Pause the
+        pipeline if new rate is zero, like advised in the GStreamer
+        documentation of gst_event_new_seek().
+
 2011-04-11  Vangelis Kokkevis  <vangelis@chromium.org>
 
         Reviewed by James Robinson.
